<resources>
    <string name="app_name">URideCY</string>
    <string name="termsAndConditions">
        Generic Terms of Service Template Please read these terms of service (&quot;terms&quot;, &quot;terms of service&quot;)
        carefully before using [website] website (the &quot;service&quot;) operated by [name] (&quot;us&quot;, \'we&quot;, &quot;our&quot;).
        Conditions of Use  We will provide their services to you, which are subject to the conditions stated below in this document.
        Every time you visit this website, use its services or make a purchase, you accept the following conditions.
        This is why we urge you to read them carefully.
        Privacy Policy
        Before you continue using our website we advise you to read our privacy policy [link to privacy policy] regarding our user data collection.
        It will help you better understand our practices.
        Copyright  Content published on this website (digital downloads, images, texts, graphics, logos) is the property of [name] and/or its content creators and protected by international copyright laws.
        The entire compilation of the content found on this website is the exclusive property of [name], with copyright authorship for this compilation by [name].
        Communications  The entire communication with us is electronic.
        Every time you send us an email or visit our website, you are going to be communicating with us. You hereby consent to receive communications from us. If you subscribe to the news on our website, you are going to receive regular emails from us.
        We will continue to communicate with you by posting news and notices on our website and by sending you emails. You also agree that all notices, disclosures, agreements and other communications we provide to you electronically meet the legal requirements that such communications be in writing.
        Applicable Law  By visiting this website, you agree that the laws of the [your location], without regard to principles of conflict laws, will govern these terms of service, or any dispute of any sort that might come between [name] and you, or its business partners and associates.
        Disputes  Any dispute related in any way to your visit to this website or to products you purchase from us shall be arbitrated by state or federal court [your location] and you consent to exclusive jurisdiction and venue of such courts.
        Comments, Reviews, and Emails  Visitors may post content as long as it is not obscene, illegal, defamatory, threatening, infringing of intellectual property rights, invasive of privacy or injurious in any other way to third parties.
        Content has to be free of software viruses, political campaign, and commercial solicitation.  We reserve all rights (but not the obligation) to remove and/or edit such content. When you post your content, you grant [name] non-exclusive, royalty-free and irrevocable right to use, reproduce, publish, modify such content throughout the world in any media.
        License and Site Access  We grant you a limited license to access and make personal use of this website. You are not allowed to download or modify it. This may be done only with written consent from us.  User Account  If you are an owner of an account on this website, you are solely responsible for maintaining the confidentiality of your private user details (username and password).
        You are responsible for all activities that occur under your account or password.
        We reserve all rights to terminate accounts, edit or remove content and cancel orders in their sole discretion.
    </string>
    <string name="acceptTermsAndConditions">I accept the Terms and Conditions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="show_driver_filters">Show Driver Filters</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ResidenceDistrict">Residence District</string>
    <string name="smoking_allowance">Smoking Allowed</string>
    <string name="driver_rank">Driver Rank</string>
    <string name="verified_drivers_only">Verified Drivers Only</string>
    <string name="eioake01">eioake01</string>
    <string name="passenger">Passenger</string>
    <string name="passenger_rank">Passenger Rank</string>
    <string name="driver">Driver</string>
    <string name="settings">Settings</string>
    <string name="received_requests">Received Requests</string>

    <string-array name="residenceDistricts">
        <item>Select Residence District…</item>
        <item>Nicosia</item>
        <item>Larnaca</item>
        <item>Limassol</item>
    </string-array>


    <string-array name="fields_of_study">
        <item>Select Field of Study…</item>
        <item>Computer Science</item>
        <item>Mathematics and Statistics</item>
        <item>Chemistry</item>
    </string-array>

    <string-array name="Pickup_location">
        <item>Select Pickup Location…</item>
        <item>1 Panepistimiou Avenue,2109 Aglantzia, Nicosia</item>
        <item>9a,2370,Orfeos,Agios Dometios,Nicosia,CY</item>
    </string-array>

    <string-array name="drop_location">
        <item>Select Drop Location…</item>
        <item>9a,2370,Orfeos, Agios Dometios,Nicosia,CY</item>
        <item>1 Panepistimiou Avenue,2109 Aglantzia, Nicosia</item>
    </string-array>

    <string name="filtersButton">Edit Filters</string>
    <string name="filtersTitle">Modify Driver Filters</string>
    <string name="mobility_access">Mobility Access</string>
    <string name="any">Any</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="eating_allowance">Eating Allowance</string>
    <string name="field_of_studyText">Field Of Study</string>

    <style name="ActionItem">
        <item name="android:textSize">@dimen/text_size</item>
        <item name="android:drawablePadding">@dimen/drawable_padding</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:padding">@dimen/normal_padding</item>
    </style>

    <string name="pass_name">  Andreas Ioannou</string>
    <string name="pass_field_of_study">  Computer Science, UCY</string>
    <string name="pass_ranking">Passenger Ranking: 4 / 5</string>
    <string name="pass_phone_no">97781769</string>
    <string name="passenger_location">9a, 2370, Orfeos, Agios Dometios, Nicosia, CY</string>

    <string name="driver_name">  Anna Michael</string>
    <string name="driver_field_of_study">  Mathematics, UCY</string>
    <string name="driver_ranking">Driver Ranking: 4,5 / 5</string>
    <string name="driver_phone_no">990124183</string>
    <string name="driver_location">13, 2415, Ilia Papakyriakou, Egkomi, Nicosia, CY</string>
    <string name="title_activity_maps">Map</string>


</resources>
