<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:padding="10dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/passenger" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:id="@+id/pass_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_name"
                        android:textSize="30dp"
                        />
                    <TextView
                        android:id="@+id/pass_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_field_of_study"
                        android:textSize="20dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/pass_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_ranking"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/pass_telno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_phone_no"
                android:textSize="20dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/map_marker"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:id="@+id/passenger_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_location"
                    android:textSize="15dp"
                    android:paddingTop="3dp"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:padding="10dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/driver" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/driver_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_name"
                        android:textSize="30dp"
                        />
                    <TextView
                        android:id="@+id/driver_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_field_of_study"
                        android:textSize="20dp"
                        />
                </LinearLayout>
            </LinearLayout>

                    <TextView
                        android:id="@+id/driver_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_ranking"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:id="@+id/driver_telno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_phone_no"
                        android:textSize="20dp"
                        />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="2dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="41dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/map_marker"
                        android:layout_marginTop="2dp"/>

                    <TextView
                        android:id="@+id/driver_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_location"
                        android:textSize="15dp"
                        android:paddingTop="3dp"
                        />

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>