<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainState"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/useIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logout"
                android:onClick="logout"/>

            <ImageView
                android:id="@+id/useIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/logout"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/person_head_icon" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/eioake01"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/useIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/driver"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/useIcon"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <TextView
                android:id="@+id/passengerRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="216dp"
                android:layout_marginRight="216dp"
                android:text="@string/passenger_rank"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/useIcon" />

            <TextView
                android:id="@+id/driverRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="258dp"
                android:layout_marginRight="256dp"
                android:text="@string/driver_rank"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passengerRank" />

            <RatingBar
                android:id="@+id/ratingBarPassenger"
                style="@android:style/Widget.Holo.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="92dp"
                app:layout_constraintStart_toEndOf="@+id/passengerRank"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBarDriver"
                style="@android:style/Widget.Holo.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="116dp"
                app:layout_constraintStart_toEndOf="@+id/driverRank"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="viewSettings"/>

            <Button
                android:id="@+id/receivedRequests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/received_requests"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="viewReceivedRideRequests"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/pickUpTime"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:autofillHints="Pick Up Time"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/pickUpLocation"
        app:layout_constraintEnd_toStartOf="@+id/responseDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/responseDeadline"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/destinationLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pickUpTime"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <Spinner
        android:id="@+id/pickUpLocation"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:entries="@array/Pickup_location"
        app:layout_constraintBottom_toTopOf="@+id/requestARideButton"
        app:layout_constraintEnd_toStartOf="@+id/destinationLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Spinner
        android:id="@+id/destinationLocation"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:entries="@array/drop_location"
        app:layout_constraintBottom_toTopOf="@+id/requestARideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pickUpLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <ImageButton
        android:id="@+id/requestARideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        app:srcCompat="@drawable/ride_request_button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:onClick="showBottomSheet"
        android:padding="8dp"
        android:text="@string/show_driver_filters"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="viewMap"/>


</androidx.constraintlayout.widget.ConstraintLayout>